# esp32_watch2

./: .gitignore  sdkconfig  sdkconfig.old
main/: BUTTON_OPTIMIZATION.md  CMakeLists.txt  HARDWARE_RTC_README.md  WIFI_TROUBLESHOOTING.md  btc.c  btc.h  button_test.c  button_test.h  clock.c  clock.h  example_qspi_with_ram.c  file_browser.c  file_browser.h  hardware_rtc.c  hardware_rtc.h  idf_component.yml  image_viewer.c  image_viewer.h  lvgl_3d_cube.c  lvgl_3d_cube.h  lvgl_button.c  lvgl_button.h  lvgl_lock.h  main.c  menu_screen.c  menu_screen.h  mpu6050.c  mpu6050.h  mpu6050_screen.c  mpu6050_screen.h  music_player.c  music_player.h  screen_power.c  screen_power.h  sdcard.c  sdcard.h  sdcard_mount.c  sdcard_mount.h  wifi_connect.c  wifi_connect.h  (+2 more)
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_Font200.c  ui_font_FontD200.c
main/ui/images/: ui_img_icon_alarm_png.c  ui_img_icon_calendar_png.c  ui_img_icon_camera_png.c  ui_img_icon_clock_png.c  ui_img_icon_imessage_png.c  ui_img_icon_itunes_png.c  ui_img_icon_lora_png.c  ui_img_icon_mail_png.c  ui_img_icon_maps_png.c  ui_img_icon_phone_png.c  ui_img_icon_photos_png.c  ui_img_icon_pulse_png.c  ui_img_icon_reminders_png.c  ui_img_icon_settings_png.c  ui_img_icon_stocks_png.c  ui_img_icon_timer_png.c  ui_img_icon_wallet_png.c  ui_img_icon_weather_png.c  ui_img_icon_workout_png.c  ui_img_icon_world_png.c  ui_img_img_img1_png.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_ScreenHomeImg.c  ui_ScreenMenu.c
